fix problem with hiding the previous results

--- a/index.html
+++ b/index.html
@@ -27,19 +27,20 @@
         </div>
         <button type="submit" class="btn">Submit</button>
       </form>
-      <div id="equilateral">
-        <h1>Equilateral: All sides are equal.</h1>
+      <div class="results">
+        <div id="equilateral">
+          <h1>Equilateral: All sides are equal.</h1>
+        </div>
+        <div id="isosceles">
+          <h1>Isosceles: Exactly 2 sides are equal.</h1>
+        </div>
+        <div id="scalene">
+          <h1>Scalene: No sides are equal.</h1>
+        </div>
+        <div id="notTriangle">
+          <h1>NOT a triangle: The sum of the lengths of any two sides of a triangle is less than or equal to the length of the third side.</h1>
+        </div>
       </div>
-      <div id="isosceles">
-        <h1>Isosceles: Exactly 2 sides are equal.</h1>
-      </div>
-      <div id="scalene">
-        <h1>Scalene: No sides are equal.</h1>
-      </div>
-      <div id="notTriangle">
-        <h1>NOT a triangle: The sum of the lengths of any two sides of a triangle is less than or equal to the length of the third side.</h1>
-      </div>
-
     </div>
   </body>
 </html>
